--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </header>
 
-    <!-- <<<<<<<<<<<<< CARDS SECTION >>>>>>>>>>>>>  -->
+    <!-- <<<<<<<<<<<<< PRODUCT SECTION >>>>>>>>>>>>>  -->
     <section class="product">
       <h2 class="product-category">best selling</h2>
       <button class="pre-btn"><img src="img/arrow.png" alt="" /></button>
@@ -124,7 +124,246 @@
       </div>
     </section>
 
+    <!-- <<<<<<<<<<<<< COLLECTION SECTION >>>>>>>>>>>>>  -->
+    <section class="collection-container">
+      <a href="#" class="collection">
+        <img src="img/women-collection.png" alt="" />
+        <p class="collection-title">
+          women <br />
+          apparels
+        </p>
+      </a>
+      <a href="#" class="collection">
+        <img src="img/men-collection.png" alt="" />
+        <p class="collection-title">
+          men <br />
+          apparels
+        </p>
+      </a>
+      <a href="#" class="collection">
+        <img src="img/accessories-collection.png" alt="" />
+        <p class="collection-title">
+          women <br />
+          accessories
+        </p>
+      </a>
+    </section>
+
+    <!-- <<<<<<<<<<<<< PRODUCT-2 SECTION >>>>>>>>>>>>>  -->
+    <section class="product">
+      <h2 class="product-category">Shoes</h2>
+      <button class="pre-btn"><img src="img/arrow.png" alt="" /></button>
+      <button class="next-btn"><img src="img/arrow.png" alt="" /></button>
+      <div class="product-container">
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card9.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card10.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card11.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card12.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card10.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card11.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card9.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card7.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <<<<<<<<<<<<< PRODUCT-3 SECTION >>>>>>>>>>>>>  -->
+    <section class="product">
+      <h2 class="product-category">Shirts</h2>
+      <button class="pre-btn"><img src="img/arrow.png" alt="" /></button>
+      <button class="next-btn"><img src="img/arrow.png" alt="" /></button>
+      <div class="product-container">
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/product image 1.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/product image 2.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/product image 3.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/product image 4.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/product image 3.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/product image 2.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/product image 4.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/product image 1.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="brand-product">brand</h2>
+            <p class="product-short-des">a short line about the cloth...</p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <<<<<<<<<<<<< FOOTER >>>>>>>>>>>>>  -->
+    <footer></footer>
+
     <script src="js/nav.js"></script>
     <script src="js/home.js"></script>
+    <script src="js/footer.js"></script>
   </body>
 </html>
