product page, search results page and 404 page

--- a/product.html
+++ b/product.html
@@ -4,150 +4,95 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-Commerce Clothing Website</title>
+    <title>Product Page</title>
 
     <link rel="stylesheet" href="./css/home.css" />
+    <link rel="stylesheet" href="./css/product.css" />
   </head>
   <body>
     <!-- <<<<<<<<<<<<< NAVBAR >>>>>>>>>>>>>  -->
     <nav class="navbar"></nav>
 
-    <!-- <<<<<<<<<<<<< HERO SECTION >>>>>>>>>>>>>  -->
-    <header class="hero-section">
-      <div class="content">
-        <img src="img/light-logo.png" class="logo" alt="" />
-        <p class="sub-heading">best fashion collection of all time</p>
+    <!-- <<<<<<<<<<<<< PRODUCT DETAILS >>>>>>>>>>>>>  -->
+    <section class="product-details">
+      <div class="image-slider">
+        <div class="product-images">
+          <img src="img/product image 1.png" class="active" alt="" />
+          <img src="img/product image 2.png" alt="" />
+          <img src="img/product image 3.png" alt="" />
+          <img src="img/product image 4.png" alt="" />
+        </div>
       </div>
-    </header>
+      <div class="details">
+        <h2 class="product-brand">calvin klein</h2>
+        <p class="product-short-des">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem,
+          deserunt!
+        </p>
+        <span class="product-price">$99</span>
+        <span class="product-actual-price">$200</span>
+        <span class="product-discount">( 50% off )</span>
 
-    <!-- <<<<<<<<<<<<< PRODUCT SECTION >>>>>>>>>>>>>  -->
-    <section class="product">
-      <h2 class="product-category">best selling</h2>
-      <button class="pre-btn"><img src="img/arrow.png" alt="" /></button>
-      <button class="next-btn"><img src="img/arrow.png" alt="" /></button>
-      <div class="product-container">
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card1.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card2.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card3.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card4.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card5.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card6.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card7.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card8.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
+        <p class="product-sub-heading">select size</p>
+
+        <input type="radio" name="size" value="s" checked hidden id="s-size" />
+        <label for="s-size" class="size-radio-btn check">s</label>
+
+        <input type="radio" name="size" value="s" hidden id="m-size" />
+        <label for="m-size" class="size-radio-btn">m</label>
+
+        <input type="radio" name="size" value="s" hidden id="l-size" />
+        <label for="l-size" class="size-radio-btn">l</label>
+
+        <input type="radio" name="size" value="s" hidden id="xl-size" />
+        <label for="xl-size" class="size-radio-btn">xl</label>
+
+        <input type="radio" name="size" value="s" hidden id="xxl-size" />
+        <label for="xxl-size" class="size-radio-btn">xxl</label>
+
+        <button class="btn cart-btn">add to cart</button>
+        <button class="btn">add to wishlist</button>
       </div>
     </section>
 
-    <!-- <<<<<<<<<<<<< COLLECTION SECTION >>>>>>>>>>>>>  -->
-    <section class="collection-container">
-      <a href="#" class="collection">
-        <img src="img/women-collection.png" alt="" />
-        <p class="collection-title">
-          women <br />
-          apparels
-        </p>
-      </a>
-      <a href="#" class="collection">
-        <img src="img/men-collection.png" alt="" />
-        <p class="collection-title">
-          men <br />
-          apparels
-        </p>
-      </a>
-      <a href="#" class="collection">
-        <img src="img/accessories-collection.png" alt="" />
-        <p class="collection-title">
-          women <br />
-          accessories
-        </p>
-      </a>
+    <!-- <<<<<<<<<<<<< PRODUCT DETAILS DESCRIPTION >>>>>>>>>>>>>  -->
+    <section class="detials-des">
+      <h2 class="heading">description</h2>
+      <p class="des">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique enim
+        distinctio pariatur repellat ut maiores quaerat expedita! Nesciunt
+        suscipit, atque ad repudiandae assumenda delectus fugit vel ea eveniet
+        quod accusamus mollitia iusto. Ab temporibus sed nisi consequatur hic
+        exercitationem nemo repudiandae voluptate ea facilis velit veniam totam
+        saepe, non quasi voluptatum qui voluptates fugit reprehenderit itaque.
+        Eligendi odio aliquam vitae consectetur sapiente nam quos dignissimos
+        quisquam nesciunt, reiciendis quod corrupti ut molestias dicta quia quae
+        voluptatibus, ex officia sint labore tenetur expedita. Nam fugiat ad
+        mollitia neque rerum repudiandae! Aliquid rerum quo exercitationem
+        repellat fuga velit sequi optio mollitia. Natus, id distinctio. Nobis
+        ullam sed officiis, velit ipsam praesentium recusandae aliquid eligendi
+        molestias minima. Deleniti illo, modi nesciunt, impedit eius accusantium
+        et sequi voluptatem minima repudiandae quisquam incidunt ipsum dolorem
+        fugit reiciendis placeat dicta quam non adipisci voluptates? Veritatis
+        cupiditate quae in! Earum rem nisi hic sed ratione aliquid corrupti
+        molestias sint accusantium, adipisci sunt minus consequatur possimus!
+        Molestias asperiores numquam doloremque ipsam dolor repudiandae quia
+        facere deleniti voluptatem provident dicta eius officiis, qui voluptate
+        placeat nobis labore sed! Rem vel labore, placeat reiciendis quae quod
+        repellendus nam, commodi doloremque impedit harum sed velit totam quam
+        repellat debitis eligendi, minima nemo mollitia? Fugiat repudiandae quo
+        laborum, voluptatum ratione quibusdam illo vitae odio ex dolorum nemo
+        officiis error, impedit in beatae sed, quisquam vel aspernatur ducimus
+        dolore delectus! Repellat sapiente dicta aliquid unde rerum quo magni
+        ducimus quisquam eum aperiam eveniet sequi voluptatem, nobis odio
+        repellendus repudiandae accusantium nam inventore modi iusto cupiditate
+        neque! Distinctio iure ab nihil, dolores iste, provident mollitia
+        excepturi expedita autem eveniet laudantium nesciunt inventore, animi ad
+        tempora consectetur quam nostrum temporibus? Maiores et odio facilis
+        dolores, fugit totam accusamus ex unde aliquid! Inventore asperiores
+        repellendus unde eos? Molestiae facilis totam laboriosam odio molestias
+        commodi repellat esse!
+      </p>
     </section>
 
     <!-- <<<<<<<<<<<<< PRODUCT-2 SECTION >>>>>>>>>>>>>  -->
@@ -365,6 +310,7 @@
 
     <script src="js/nav.js"></script>
     <script src="js/home.js"></script>
+    <script src="js/product.js"></script>
     <script src="js/footer.js"></script>
   </body>
 </html>
