--- a/search.html
+++ b/search.html
@@ -4,27 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-Commerce Clothing Website</title>
+    <title>Search Results</title>
 
     <link rel="stylesheet" href="./css/home.css" />
+    <link rel="stylesheet" href="./css/search.css" />
   </head>
   <body>
     <!-- <<<<<<<<<<<<< NAVBAR >>>>>>>>>>>>>  -->
     <nav class="navbar"></nav>
 
-    <!-- <<<<<<<<<<<<< HERO SECTION >>>>>>>>>>>>>  -->
-    <header class="hero-section">
-      <div class="content">
-        <img src="img/light-logo.png" class="logo" alt="" />
-        <p class="sub-heading">best fashion collection of all time</p>
-      </div>
-    </header>
-
-    <!-- <<<<<<<<<<<<< PRODUCT SECTION >>>>>>>>>>>>>  -->
-    <section class="product">
-      <h2 class="product-category">best selling</h2>
-      <button class="pre-btn"><img src="img/arrow.png" alt="" /></button>
-      <button class="next-btn"><img src="img/arrow.png" alt="" /></button>
+    <!-- <<<<<<<<<<<<< SEARCH RESULTS >>>>>>>>>>>>>  -->
+    <section class="search-results">
+      <h2 class="heading">search results for <span>product</span></h2>
       <div class="product-container">
         <div class="product-card">
           <div class="product-image">
@@ -122,40 +113,6 @@
             <span class="price">$20</span><span class="actual-price">$40</span>
           </div>
         </div>
-      </div>
-    </section>
-
-    <!-- <<<<<<<<<<<<< COLLECTION SECTION >>>>>>>>>>>>>  -->
-    <section class="collection-container">
-      <a href="#" class="collection">
-        <img src="img/women-collection.png" alt="" />
-        <p class="collection-title">
-          women <br />
-          apparels
-        </p>
-      </a>
-      <a href="#" class="collection">
-        <img src="img/men-collection.png" alt="" />
-        <p class="collection-title">
-          men <br />
-          apparels
-        </p>
-      </a>
-      <a href="#" class="collection">
-        <img src="img/accessories-collection.png" alt="" />
-        <p class="collection-title">
-          women <br />
-          accessories
-        </p>
-      </a>
-    </section>
-
-    <!-- <<<<<<<<<<<<< PRODUCT-2 SECTION >>>>>>>>>>>>>  -->
-    <section class="product">
-      <h2 class="product-category">Shoes</h2>
-      <button class="pre-btn"><img src="img/arrow.png" alt="" /></button>
-      <button class="next-btn"><img src="img/arrow.png" alt="" /></button>
-      <div class="product-container">
         <div class="product-card">
           <div class="product-image">
             <span class="discount-tag">50% off</span>
@@ -171,7 +128,7 @@
         <div class="product-card">
           <div class="product-image">
             <span class="discount-tag">50% off</span>
-            <img src="img/card10.png" class="product-thumb" alt="" />
+            <img src="img/card6.png" class="product-thumb" alt="" />
             <button class="card-btn">add to wishlist</button>
           </div>
           <div class="product-info">
@@ -183,7 +140,7 @@
         <div class="product-card">
           <div class="product-image">
             <span class="discount-tag">50% off</span>
-            <img src="img/card11.png" class="product-thumb" alt="" />
+            <img src="img/card3.png" class="product-thumb" alt="" />
             <button class="card-btn">add to wishlist</button>
           </div>
           <div class="product-info">
@@ -195,43 +152,7 @@
         <div class="product-card">
           <div class="product-image">
             <span class="discount-tag">50% off</span>
-            <img src="img/card12.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card10.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card11.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card9.png" class="product-thumb" alt="" />
+            <img src="img/card5.png" class="product-thumb" alt="" />
             <button class="card-btn">add to wishlist</button>
           </div>
           <div class="product-info">
@@ -252,19 +173,10 @@
             <span class="price">$20</span><span class="actual-price">$40</span>
           </div>
         </div>
-      </div>
-    </section>
-
-    <!-- <<<<<<<<<<<<< PRODUCT-3 SECTION >>>>>>>>>>>>>  -->
-    <section class="product">
-      <h2 class="product-category">Shirts</h2>
-      <button class="pre-btn"><img src="img/arrow.png" alt="" /></button>
-      <button class="next-btn"><img src="img/arrow.png" alt="" /></button>
-      <div class="product-container">
         <div class="product-card">
           <div class="product-image">
             <span class="discount-tag">50% off</span>
-            <img src="img/product image 1.png" class="product-thumb" alt="" />
+            <img src="img/card4.png" class="product-thumb" alt="" />
             <button class="card-btn">add to wishlist</button>
           </div>
           <div class="product-info">
@@ -276,7 +188,7 @@
         <div class="product-card">
           <div class="product-image">
             <span class="discount-tag">50% off</span>
-            <img src="img/product image 2.png" class="product-thumb" alt="" />
+            <img src="img/card10.png" class="product-thumb" alt="" />
             <button class="card-btn">add to wishlist</button>
           </div>
           <div class="product-info">
@@ -288,67 +200,7 @@
         <div class="product-card">
           <div class="product-image">
             <span class="discount-tag">50% off</span>
-            <img src="img/product image 3.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/product image 4.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/product image 3.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/product image 2.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/product image 4.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
-          </div>
-          <div class="product-info">
-            <h2 class="brand-product">brand</h2>
-            <p class="product-short-des">a short line about the cloth...</p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/product image 1.png" class="product-thumb" alt="" />
+            <img src="img/card4.png" class="product-thumb" alt="" />
             <button class="card-btn">add to wishlist</button>
           </div>
           <div class="product-info">
@@ -364,7 +216,6 @@
     <footer></footer>
 
     <script src="js/nav.js"></script>
-    <script src="js/home.js"></script>
     <script src="js/footer.js"></script>
   </body>
 </html>
